gap fix test

--- a/scss/screen-sizes/tablet/_tablet.scss
+++ b/scss/screen-sizes/tablet/_tablet.scss
@@ -493,6 +493,13 @@ h2 {
         flex-wrap: wrap;
         justify-content: center;
         margin: 40px auto 0 auto;
+
+        @supports not (gap: 20px) {
+            > *:not(:last-child) {
+                margin-right: 20px;
+            }
+        }
+
         gap: 20px;
         width: 90%;
         height: auto;
